# automatizacion-ai

./: .env  .env.example  .gitignore  .md  .pre-commit-config.yaml  API_CATALOG_DOCS.md  BUSINESS_CATALOG_CONFIG.md  CHECKLIST_N8N_F08.md  CLAUDE.md  CONTRATO_N8N.md  CONVERSATIONAL_FLOW_IMPROVEMENTS.md  CONVERSATIONAL_MEMORY_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  DOCUMENTACION_BASE_DATOS.md  DOCUMENTACION_CODIGO.md  Dockerfile  Dockerfile.actions  Dockerfile.ingestion  Dockerfile.mcp  Dockerfile.orchestrator  Dockerfile.rag  Dockerfile.router  EJEMPLO_USO_INGESTION.md  ESTADO_FINAL_INTEGRACION.md  INTEGRACION_SLM.md  INTEGRATION_README.md  LaBibliadePulpo.md  MCP_ARCHITECTURE.md  MODEL_COMPARISON.md  MODIFICAR_N8N_WORKFLOW.md  MVP_SETUP.md  PASO_2_PATCH.md  QUICKSTART_VLLM.md  QUICK_START.md  QUICK_START_CANARY.md  README.md  README_CANARY_DEPLOYMENT.md  README_DEPLOYMENT.md  README_RAG_n8n_worker.md  (+29 more)
ai/: multi_model_client.py
api/: metrics.py  orchestrator.py
api-gateway/: Dockerfile  main.py  requirements.txt
auth/: pulpo_token_validator.py
config/: alert_rules.yml  canary_config.py  prometheus.yml  vertical_prompts.yml  vllm_config.yaml
credentials/: .gitignore  README.md
database/: README.md  docker-compose.yml
deploy/: pulpo-job-scheduler.service  pulpo-ocr-worker.service
docker/: Dockerfile.file-ingestor  Dockerfile.rag  docker-compose.integrated.yml  docker-compose.tika.yml
docs/: ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_IMPROVED.md  DOCUMENT_PROCESSORS_COMPARISON.md  EXECUTIVE_SUMMARY.md  FILE_PROCESSING_FLOW.md  FILE_SYSTEM_IMPROVED.md  GOOGLE_CALENDAR_SETUP.md  IMPROVEMENTS_ROADMAP.md  INTENT_ROUTER_NODE_FIXED.md  MULTITENANT_QUALITY_SYSTEM.md  PULPO_APP_INTEGRATION.md  README.md  SUPPORTED_FILE_TYPES.md  SYSTEM_ARCHITECTURE_COMPLETE.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  WORKFLOW_CONNECTIONS_FIXED.md
examples/: ai_demo.py  demo_simple.py  integration_example.py  menu_completo.txt
jobs/: purge_job.py
logs/: ai_test_cliente_maria_20251007_154334.json  ai_test_cliente_maria_20251007_154932.json  ai_test_cliente_maria_20251007_161756.json  ai_test_cliente_maria_20251007_170358.json  ai_test_cliente_maria_20251007_171957.json  ai_test_cliente_maria_20251007_172443.json  ai_test_cliente_maria_20251007_174103.json  ai_test_confundido_20251007_154408.json  ai_test_confundido_20251007_154953.json  ai_test_confundido_20251007_161828.json  ai_test_confundido_20251007_170435.json  ai_test_confundido_20251007_172039.json  ai_test_confundido_20251007_172504.json  ai_test_confundido_20251007_174202.json  ai_test_consulta_precios_20251006_172516.json  ai_test_consulta_precios_20251006_172620.json  ai_test_consulta_precios_20251006_173305.json  ai_test_consulta_precios_20251006_173622.json  ai_test_consulta_precios_20251006_174207.json  ai_test_consulta_precios_20251007_154320.json  ai_test_consulta_precios_20251007_154919.json  ai_test_consulta_precios_20251007_161737.json  ai_test_consulta_precios_20251007_170338.json  ai_test_consulta_precios_20251007_171944.json  ai_test_consulta_precios_20251007_172422.json  ai_test_consulta_precios_20251007_174035.json  ai_test_impaciente_20251007_154421.json  ai_test_impaciente_20251007_155007.json  ai_test_impaciente_20251007_161839.json  ai_test_impaciente_20251007_170448.json  ai_test_impaciente_20251007_172055.json  ai_test_impaciente_20251007_172517.json  ai_test_impaciente_20251007_174222.json  ai_test_quiero_agendar_turno_20251007_154254.json  ai_test_quiero_agendar_turno_20251007_154855.json  ai_test_quiero_agendar_turno_20251007_161717.json  ai_test_quiero_agendar_turno_20251007_170315.json  ai_test_quiero_agendar_turno_20251007_171915.json  ai_test_quiero_agendar_turno_20251007_172352.json  ai_test_quiero_agendar_turno_20251007_173153.json  (+1 more)
monitoring/: prometheus_config.yml  prometheus_rules.yml
n8n/: n8n-workflow-f08-fixed.json  n8n-workflow-f08.json  n8n-workflow-integrated.json  n8n-workflow.json  n8n-workflow.json.backup  pulpo-workflow-updated.json
scripts/: ai_client_tester.py  apply-migrations.sh  apply_new_migrations.py  bootstrap.sh  check_gpu.sh  check_services.sh  complete_google_calendar_setup.py  deploy.sh  deploy_f08.sh  readme.md  (+51 more)
(+225 files in other folders)
